load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//build:STRINGER.bzl", "stringer")

go_library(
    name = "cli",
    srcs = [
        "absolute_fs.go",
        "auth.go",
        "cert.go",
        "cli.go",
        "client_url.go",
        "connect.go",
        "connect_join.go",
        "context.go",
        "convert_url.go",
        "cpuprofile.go",
        "debug.go",
        "debug_check_store.go",
        "debug_job_trace.go",
        "debug_list_files.go",
        "debug_logconfig.go",
        "debug_merge_logs.go",
        "debug_recover_loss_of_quorum.go",
        "debug_reset_quorum.go",
        "debug_send_kv_batch.go",
        "debug_synctest.go",
        "decode.go",
        "demo.go",
        "demo_telemetry.go",
        "doctor.go",
        "examples.go",
        "flags.go",
        "flags_util.go",
        "gen.go",
        "haproxy.go",
        "import.go",
        "init.go",
        "initial_sql.go",
        "log_flags.go",
        "mt.go",
        "mt_cert.go",
        "mt_proxy.go",
        "mt_start_sql.go",
        "mt_test_directory.go",
        "node.go",
        "nodelocal.go",
        "prefixer.go",
        "quit.go",
        "sql_client.go",
        "sql_shell_cmd.go",
        "sqlfmt.go",
        "start.go",
        "start_jemalloc.go",
        "start_unix.go",
        "start_windows.go",
        "statement_bundle.go",
        "statement_diag.go",
        "swappable_fs.go",
        "testutils.go",
        "tsdump.go",
        "userfile.go",
        "zip.go",
        "zip_cluster_wide.go",
        "zip_cmd.go",
        "zip_helpers.go",
        "zip_per_node.go",
        ":gen-keytype-stringer",  # keep
    ],
    # keep
    cdeps = [
        "@cockroach//c-deps:libjemalloc",
    ],
    cgo = True,
    # keep
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:android": [
            "-lrt -lm -lpthread",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "-lm",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "-lm",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-lrt -lm -lpthread",
        ],
        "//conditions:default": [],
    }),
    # keep
    cppopts = [
        "-DJEMALLOC_NO_DEMANGLE",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/base",
        "//pkg/build",
        "//pkg/ccl/sqlproxyccl",
        "//pkg/ccl/sqlproxyccl/tenantdirsvr",
        "//pkg/cli/clicfg",
        "//pkg/cli/clierror",
        "//pkg/cli/clierrorplus",
        "//pkg/cli/cliflags",
        "//pkg/cli/clisqlcfg",
        "//pkg/cli/clisqlclient",
        "//pkg/cli/clisqlexec",
        "//pkg/cli/clisqlshell",
        "//pkg/cli/democluster",
        "//pkg/cli/exit",
        "//pkg/cli/syncbench",
        "//pkg/cloud",
        "//pkg/cloud/impl:cloudimpl",
        "//pkg/cloud/userfile",
        "//pkg/clusterversion",
        "//pkg/config",
        "//pkg/config/zonepb",
        "//pkg/docs",
        "//pkg/geo/geos",
        "//pkg/gossip",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/keys",
        "//pkg/kv/kvserver",
        "//pkg/kv/kvserver/gc",
        "//pkg/kv/kvserver/liveness/livenesspb",
        "//pkg/kv/kvserver/loqrecovery",
        "//pkg/kv/kvserver/loqrecovery/loqrecoverypb",
        "//pkg/kv/kvserver/rditer",
        "//pkg/kv/kvserver/stateloader",
        "//pkg/roachpb",
        "//pkg/rpc",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/server/debug",
        "//pkg/server/dumpstore",
        "//pkg/server/heapprofiler",
        "//pkg/server/pgurl",
        "//pkg/server/serverpb",
        "//pkg/server/status",
        "//pkg/server/status/statuspb",
        "//pkg/server/telemetry",
        "//pkg/settings",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/catalog",
        "//pkg/sql/catalog/catalogkeys",
        "//pkg/sql/catalog/catconstants",
        "//pkg/sql/catalog/descbuilder",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/doctor",
        "//pkg/sql/execinfrapb",
        "//pkg/sql/lexbase",
        "//pkg/sql/parser",
        "//pkg/sql/pgwire/pgcode",
        "//pkg/sql/protoreflect",
        "//pkg/sql/row",
        "//pkg/sql/rowenc",
        "//pkg/sql/sem/builtins",
        "//pkg/sql/sem/tree",
        "//pkg/sql/sqlstats",
        "//pkg/startupmigrations",
        "//pkg/storage",
        "//pkg/storage/enginepb",
        "//pkg/storage/fs",
        "//pkg/testutils/serverutils",
        "//pkg/ts",
        "//pkg/ts/tspb",
        "//pkg/util",
        "//pkg/util/cgroups",
        "//pkg/util/contextutil",
        "//pkg/util/encoding",
        "//pkg/util/envutil",
        "//pkg/util/flagutil",
        "//pkg/util/grpcutil",
        "//pkg/util/hlc",
        "//pkg/util/humanizeutil",
        "//pkg/util/ioctx",
        "//pkg/util/iterutil",
        "//pkg/util/keysutil",
        "//pkg/util/log",
        "//pkg/util/log/channel",
        "//pkg/util/log/logconfig",
        "//pkg/util/log/logcrash",
        "//pkg/util/log/logflags",
        "//pkg/util/log/logpb",
        "//pkg/util/log/severity",
        "//pkg/util/netutil/addr",
        "//pkg/util/protoutil",
        "//pkg/util/randutil",
        "//pkg/util/retry",
        "//pkg/util/sdnotify",
        "//pkg/util/stop",
        "//pkg/util/syncutil",
        "//pkg/util/sysutil",
        "//pkg/util/timeutil",
        "//pkg/util/tracing",
        "//pkg/util/tracing/zipper",
        "//pkg/util/uuid",
        "//pkg/workload",
        "//pkg/workload/bank",
        "//pkg/workload/bulkingest",
        "//pkg/workload/cli",
        "//pkg/workload/examples",
        "//pkg/workload/kv",
        "//pkg/workload/movr",
        "//pkg/workload/tpcc",
        "//pkg/workload/tpch",
        "//pkg/workload/workloadsql",
        "//pkg/workload/ycsb",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_cockroachdb_errors//hintdetail",
        "@com_github_cockroachdb_errors//oserror",
        "@com_github_cockroachdb_logtags//:logtags",
        "@com_github_cockroachdb_pebble//tool",
        "@com_github_cockroachdb_pebble//vfs",
        "@com_github_cockroachdb_redact//:redact",
        "@com_github_cockroachdb_ttycolor//:ttycolor",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@com_github_gogo_protobuf//jsonpb",
        "@com_github_kr_pretty//:pretty",
        "@com_github_lib_pq//:pq",
        "@com_github_marusama_semaphore//:semaphore",
        "@com_github_mattn_go_isatty//:go-isatty",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_cobra//doc",
        "@com_github_spf13_pflag//:pflag",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@io_etcd_go_etcd_raft_v3//raftpb",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "cli_test",
    size = "large",
    srcs = [
        "cert_test.go",
        "cli_debug_test.go",
        "cli_test.go",
        "connect_join_test.go",
        "convert_url_test.go",
        "debug_check_store_test.go",
        "debug_job_trace_test.go",
        "debug_list_files_test.go",
        "debug_merge_logs_test.go",
        "debug_recover_loss_of_quorum_test.go",
        "debug_send_kv_batch_test.go",
        "debug_test.go",
        "decode_test.go",
        "demo_locality_test.go",
        "demo_test.go",
        "doctor_test.go",
        "flags_test.go",
        "gen_test.go",
        "haproxy_test.go",
        "import_test.go",
        "log_flags_test.go",
        "main_test.go",
        "node_test.go",
        "nodelocal_test.go",
        "prefixer_test.go",
        "quit_test.go",
        "sqlfmt_test.go",
        "start_test.go",
        "statement_bundle_test.go",
        "statement_diag_test.go",
        "userfiletable_test.go",
        "workload_test.go",
        "zip_helpers_test.go",
        "zip_tenant_test.go",
        "zip_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":cli"],
    shard_count = 16,
    deps = [
        "//pkg/base",
        "//pkg/build",
        "//pkg/ccl/kvccl/kvtenantccl",
        "//pkg/cli/clicfg",
        "//pkg/cli/clierror",
        "//pkg/cli/clierrorplus",
        "//pkg/cli/cliflags",
        "//pkg/cli/clisqlcfg",
        "//pkg/cli/clisqlclient",
        "//pkg/cli/clisqlexec",
        "//pkg/cli/democluster",
        "//pkg/cli/exit",
        "//pkg/gossip",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/keys",
        "//pkg/kv",
        "//pkg/kv/kvserver",
        "//pkg/kv/kvserver/liveness/livenesspb",
        "//pkg/kv/kvserver/loqrecovery/loqrecoverypb",
        "//pkg/kv/kvserver/stateloader",
        "//pkg/roachpb",
        "//pkg/rpc",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/server",
        "//pkg/server/serverpb",
        "//pkg/server/status",
        "//pkg/server/status/statuspb",
        "//pkg/settings/cluster",
        "//pkg/sql",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/protoreflect",
        "//pkg/sql/tests",
        "//pkg/storage",
        "//pkg/testutils",
        "//pkg/testutils/buildutil",
        "//pkg/testutils/serverutils",
        "//pkg/testutils/skip",
        "//pkg/testutils/sqlutils",
        "//pkg/testutils/testcluster",
        "//pkg/util",
        "//pkg/util/ioctx",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/log/logconfig",
        "//pkg/util/log/logpb",
        "//pkg/util/protoutil",
        "//pkg/util/stop",
        "//pkg/util/timeutil",
        "//pkg/util/tracing",
        "//pkg/workload/examples",
        "@com_github_cockroachdb_datadriven//:datadriven",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_cockroachdb_pebble//vfs",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

stringer(
    name = "gen-keytype-stringer",
    src = "flags_util.go",
    typ = "keyType",
)

filegroup(
    name = "interactive_tests",
    srcs = glob(
        ["interactive_tests/**"],
        # TODO(rail): The following tests fail under bazel.
        # https://github.com/cockroachdb/cockroach/issues/71932, aka
        # "broken_in_bazel"
        exclude = [
            "*/test_multiline_statements.tcl",
            "*/test_pretty.tcl",
            "*/test_server_sig.tcl",
        ],
    ),
    visibility = ["//visibility:public"],
)
