load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clusterversion",
    srcs = [
        "clusterversion.go",
        "cockroach_versions.go",
        "dev_offset.go",
        "setting.go",
        "testutils.go",
        "utilversions.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/clusterversion",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/build",
        "//pkg/clusterversion/clusterversionpb",
        "//pkg/roachpb",
        "//pkg/settings",
        "//pkg/util/envutil",
        "//pkg/util/log",
        "//pkg/util/metric",
        "//pkg/util/protoutil",
        "//pkg/util/timeutil",
        "@com_github_cockroachdb_errors//:errors",
    ],
)

go_test(
    name = "clusterversion_test",
    size = "small",
    srcs = [
        "clusterversion_test.go",
        "cockroach_versions_test.go",
        "setting_test.go",
    ],
    embed = [":clusterversion"],
    deps = [
        "//pkg/build",
        "//pkg/clusterversion/clusterversionpb",
        "//pkg/roachpb",
        "//pkg/settings",
        "//pkg/settings/cluster",
        "//pkg/testutils",
        "//pkg/util/leaktest",
        "//pkg/util/protoutil",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_cockroachdb_redact//:redact",
        "@com_github_stretchr_testify//require",
    ],
)
